--- a/_sass/general-styles.scss
+++ b/_sass/general-styles.scss
@@ -7,7 +7,7 @@ body, html{
 }
 
 
-@include scale-headers($major-third);
+@include scale-headers($major-second);
 h1, h2, h3, h4, h5, h6{
     a, a:hover, a:visited, a:active {color: $base-font-color;}
 }
