--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -5,7 +5,7 @@
     z-index: 9999;
     background-color: $action-color;
     color: white;
-    padding: .5em;
+    padding: 1rem;
     @include uncolor-links(white);
 }
 
@@ -26,7 +26,7 @@
 
 #nav-expander{
     position: absolute;
-    top: 1.75em;
+    top: 1.5em;
     right: .5em;
     a{
         padding: .5em;
@@ -39,12 +39,13 @@
 #nav-links{
     width: 100%;
     position: absolute;
-    top: 5em;
+    top: 4em;
     right: 0;
     background-color: $action-color;
     @include media($large-screen){
         display: block;
-        top: 1.75em;
+        top: 1.5em;
+        right: .5rem;
         width: auto;
     }
 
